# mix-cookbooks

./: .env.example  .gitignore  LICENSE  Makefile  README.md  start_mix.sh
examples/: CLAUDE.md
examples/admin-data-intelligence/: package.json
examples/cms-media-intelligence/: README.md  package.json
examples/portfolio-analyzer/: README.md  netlify.toml  package.json
examples/shopping-app/: CLAUDE.md  README.md  package.json
plan/: 00-IMPLEMENTATION-PLAN.md  01-cms-media-intelligence.md  02-admin-data-intelligence.md  03-shopping-app-agentic-research.md  AGENTIC-FOCUS.md  MIX-INTEGRATION-GUIDE.mdx  README.md  day-01-shopping-assistant.md  day-02-recipe-remix.md  day-03-travel-planner.md  day-05-financial-analyzer.md  day-06-content-repurposer.md  day-07-document-qa.md  integration-examples.mdx
python/: README.md  portfolio_analysis.py  pyproject.toml  requirements.txt  setup.sh  upload_image_ask.py
python/guides/: system_prompt_change.py
python_examples/: README.md  pyproject.toml  requirements.txt  utils.py
python_examples/demos/: portfolio_analysis.py  tiktok_video.py  upload_image_ask.py  utils.py  web_search_multimodal.py
python_examples/scripts/: setup.sh
sample_files/: Robinhood Portfolio Q4 2024.csv
typescript_examples/: README.md  helpers.ts  package-lock.json  package.json  tsconfig.json  utils.ts
typescript_examples/demos/: portfolio_analysis.ts  tiktok_video.ts  upload_image_ask.ts  web_search_multimodal.ts
webapp-starter/: .cta.json  .env.example  .gitignore  README.md  package.json
webapp-starter/src/: routeTree.gen.ts
(+61 files in other folders)
